# modelscope-studio

./: .commitlintrc.js  .eslintignore  .eslintrc.js  .flake8  .gitignore  .lintstagedrc  .prettierignore  .prettierrc.js  CHANGELOG.md  README-ja_JP.md  README-zh_CN.md  README.md  eslint.config.mjs  fixtures.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  stylelint.config.js  svelte-tsconfig.json  tsconfig.json
.changeset/: beige-bugs-bake.md  blue-chicken-sin.md  blue-eggs-invite.md  brave-keys-hear.md  breezy-eagles-dress.md  breezy-moons-hammer.md  brown-trains-flow.md  chilled-snails-matter.md  chilled-spoons-serve.md  chilly-beers-shine.md  chilly-lemons-pretend.md  clean-corners-reply.md  config.json  cool-clouds-spend.md  cuddly-eels-occur.md  cute-forks-see.md  early-lies-bet.md  eleven-aliens-sell.md  every-peas-lie.md  fair-pianos-rule.md  famous-horses-open.md  fancy-swans-help.md  fast-nails-unite.md  few-jeans-design.md  five-actors-compete.md  five-baboons-hide.md  five-wings-look.md  flat-teachers-watch.md  flat-ways-sin.md  forty-dragons-heal.md  fruity-ends-tell.md  funny-planes-join.md  funny-singers-exercise.md  fuzzy-goats-retire.md  gentle-cars-give.md  gentle-mails-play.md  gentle-rocks-tap.md  gold-drinks-stick.md  good-pens-beam.md  great-places-post.md  (+71 more)
.github/workflows/: lint.yaml  publish.yaml
.husky/: commit-msg
.wiki/en/: Quick Start.md  Troubleshooting.md
.wiki/en/API Reference/: API Reference.md
.wiki/en/Ant Design Components/: Ant Design Components.md  Components Overview.md  Other Components.md
.wiki/en/Ant Design X Components/: Ant Design X Components.md  Components Overview.md
.wiki/en/Base Components/: Application Component.md  AutoLoading Component.md  Base Components.md  Fragment Component.md  Layout Components.md  Rendering Components.md  Slot Component.md
.wiki/en/Deployment Guide/: Build Process.md  CI CD.md  Deployment Guide.md  Environment Configuration.md  Release Process.md
.wiki/en/Development Guide/: Build and Deploy.md  Contributing Guide.md  Development Guide.md  Development Workflow.md  Documentation System.md  Environment Setup.md  Testing and Debugging.md
.wiki/en/Pro Components/: Pro Components.md
.wiki/en/Project Overview/: Core Features.md  Project Introduction.md  Project Overview.md  Tech Stack.md  Use Cases.md  Version Info.md
.wiki/zh/: 快速开始.md  故障排除.md
.wiki/zh/API 参考/: API 参考.md
.wiki/zh/Ant Design X 组件库/: Ant Design X 组件库.md  组件概览.md
.wiki/zh/Ant Design 组件库/: Ant Design 组件库.md  其他组件.md  组件概览.md
.wiki/zh/专业组件/: 专业组件.md
.wiki/zh/基础组件/: Application 组件.md  AutoLoading 组件.md  Fragment 组件.md  Slot 组件.md  基础组件.md  布局组件.md  渲染组件.md
.wiki/zh/开发指南/: 开发指南.md  开发流程.md  开发环境搭建.md  文档系统.md  构建与部署.md  测试与调试.md  贡献指南.md
.wiki/zh/部署指南/: 发布流程.md  持续集成与部署.md  构建流程.md  环境配置.md  部署指南.md
.wiki/zh/项目概述/: 应用场景.md  技术栈.md  核心特性.md  版本信息.md  项目介绍.md  项目概述.md
backend/modelscope_studio/: __init__.py  external.py  version.py
backend/modelscope_studio/components/: __init__.py
backend/modelscope_studio/utils/: __init__.py  process_links.py
config/changelog/: CHANGELOG.md  package.json  tsup.config.ts
config/changelog/src/: fix-changelog.ts  index.ts  type.ts
config/lint-config/: CHANGELOG.md  eslint.js  eslint.mjs  package.json  stylelint.js
docs/: .gitattributes  .gitignore  Dockerfile  FAQ-zh_CN.md  FAQ.md  README-zh_CN.md  README.md  __init__.py  app.py  legacy_app.py  requirements.txt
docs/api/: app.py  load-zh_CN.md  load.md
docs/components/: Docs.py  parse_markdown.py  tab-link.js
docs/components/Chatbot/: README-zh_CN.md  README.md
docs/components/Flow/: README-zh_CN.md  README.md  define_schema.md
docs/components/Lifecycle/: README.md
docs/components/Markdown/: README-zh_CN.md  README.md  app.py
docs/components/MultimodalInput/: README.md
docs/components/WaterfallGallery/: README-zh_CN.md  app.py
docs/components/legacy/: Docs.py  README-zh_CN.md  README.md  app.py
docs/demos/: example.py
docs/helper/: Docs.py  Site.py  env.py  parse_markdown.py
docs/layout_templates/chatbot/: README-zh_CN.md  README.md
docs/layout_templates/coder_artifacts/: README-zh_CN.md  README.md
docs/src/: pyproject.toml
frontend/: CHANGELOG.md  defineConfig.js  fixtures.d.ts  package.json  plugin.js  tsconfig.json
frontend/Chatbot/: CHANGELOG.md  Index.svelte  package.json
frontend/Chatbot/shared/: ChatBot.svelte  Copy.svelte  FlushingMarkdown.svelte  LikeDislike.svelte  Pending.svelte  utils.ts
frontend/Flow/: CHANGELOG.md  Index.svelte  package.json
frontend/Flow/shared/: Flow.svelte  utils.ts
frontend/Lifecycle/: CHANGELOG.md  index.svelte  package.json
frontend/Lifecycle/shared/: utils.ts
frontend/Markdown/: CHANGELOG.md  Example.svelte  Index.svelte  index.svelte  package.json
frontend/Markdown/shared/: Markdown.svelte
frontend/MultimodalInput/: CHANGELOG.md  Example.svelte  Index.svelte  package.json
frontend/WaterfallGallery/: CHANGELOG.md  gradio.config.js  index.svelte  package.json
frontend/antd/: CHANGELOG.md  package.json
frontend/antdx/: CHANGELOG.md  package.json
frontend/base/: CHANGELOG.md  package.json
frontend/compiled/: CHANGELOG.md  index.ts  package.json  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/lint-config/: eslint.js  package.json
frontend/pro/: CHANGELOG.md  package.json
frontend/shared/: CHANGELOG.md  package.json
frontend/svelte-preprocess-react/: component.ts  context.ts  events-polyfills.ts  index.ts  inject.ts  polyfills.ts  provider.ts  react-slot.tsx  slot.ts  sveltify.svelte.ts  sveltify.ts  useStore.ts
frontend/utils/: convertToCamelCase.ts  createFunction.ts  createItemsContext.tsx  createItemsContext2.tsx  omitUndefinedProps.ts  patchProps.ts  patchProps.tsx  patchSlots.ts  renderItems.tsx  renderParamsSlot.tsx  renderSlot.tsx  style.ts  styleObject2String.ts  tick.ts  upload.ts  walkHtmlNodes.ts
scripts/: check_encoding.py  create-tag-n-release.mts  create-tag-n-release.ts  create-tag.sh  publish-to-pypi.ts
(+1835 files in other folders)
