[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "modelscope_studio"
version = "0.5.2"
description = "A set of extension component, inluding components for conversational input and display in multimodal scenarios, as well as more components for vertical scenarios."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "YOUR NAME", email = "YOUREMAIL@domain.com" }]
keywords = [
  "gradio-custom-component",
  "modelscope-studio",
  "gradio-template-Chatbot",
]
# Add dependencies here
dependencies = ["gradio>=4.0,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = [
  "*.pyi",
  "backend/modelscope_studio/components/Chatbot/templates",
  "backend/modelscope_studio/components/Flow/templates",
  "backend/modelscope_studio/components/MultimodalInput/templates",
  "backend/modelscope_studio/components/Markdown/templates",
  "backend/modelscope_studio/components/WaterfallGallery/templates",
  "/backend/modelscope_studio/components/Lifecycle/templates",
  "/backend/modelscope_studio/components/Chatbot/templates",
  "/backend/modelscope_studio/components/Flow/templates",
  "/backend/modelscope_studio/components/Markdown/templates",
  "/backend/modelscope_studio/components/MultimodalInput/templates",
  "/backend/modelscope_studio/components/WaterfallGallery/templates",
]

[tool.hatch.build.targets.sdist]
exclude = ["__pycache__"]
include = ["/backend/modelscope_studio"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/modelscope_studio"]
exclude = ["__pycache__"]
