[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "modelscope_studio"
version = "1.2.4"
description = "A third-party component library based on Gradio."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "ModelScope team", email = "contact@modelscope.cn" }]
keywords = [
  "gradio-custom-component",
  "modelscope-studio",
  'antd',
  'antdx',
  'gradio-antd',
  'gradio-antdx',
]
# Add dependencies here
dependencies = ["gradio>=4.43.0,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = [
  "*.pyi",
  "backend/modelscope_studio/components/legacy/Chatbot/templates",
  "backend/modelscope_studio/components/legacy/Flow/templates",
  "backend/modelscope_studio/components/legacy/MultimodalInput/templates",
  "backend/modelscope_studio/components/legacy/Markdown/templates",
  "backend/modelscope_studio/components/legacy/WaterfallGallery/templates",
  "/backend/modelscope_studio/components/legacy/Lifecycle/templates",
  "/backend/modelscope_studio/components/antd/button/templates",
  "/backend/modelscope_studio/components/antd/card/templates",
  "/backend/modelscope_studio/components/antd/card/grid/templates",
  "/backend/modelscope_studio/components/antd/card/meta/templates",
  "/backend/modelscope_studio/components/antd/config_provider/templates",
  "/backend/modelscope_studio/components/base/fragment/templates",
  "/backend/modelscope_studio/components/base/each/templates",
  "/backend/modelscope_studio/components/base/slot/templates",
  "/backend/modelscope_studio/components/base/application/templates",
  "/backend/modelscope_studio/components/antd/message/templates",
  "/backend/modelscope_studio/components/antd/spin/templates",
  "/backend/modelscope_studio/components/antd/upload/templates",
  "/backend/modelscope_studio/components/antd/icon/templates",
  "/backend/modelscope_studio/components/antd/icon/iconfont_provider/templates",
  "/backend/modelscope_studio/components/antd/button/group/templates",
  "/backend/modelscope_studio/components/antd/float_button/templates",
  "/backend/modelscope_studio/components/antd/affix/templates",
  "/backend/modelscope_studio/components/base/filter/templates",
  "/backend/modelscope_studio/components/antd/float_button/back_top/templates",
  "/backend/modelscope_studio/components/antd/float_button/group/templates",
  "/backend/modelscope_studio/components/antd/typography/link/templates",
  "/backend/modelscope_studio/components/antd/typography/paragraph/templates",
  "/backend/modelscope_studio/components/antd/typography/text/templates",
  "/backend/modelscope_studio/components/antd/typography/title/templates",
  "/backend/modelscope_studio/components/antd/anchor/templates",
  "/backend/modelscope_studio/components/antd/anchor/item/templates",
  "/backend/modelscope_studio/components/antd/breadcrumb/templates",
  "/backend/modelscope_studio/components/antd/breadcrumb/item/templates",
  "/backend/modelscope_studio/components/antd/grid/col/templates",
  "/backend/modelscope_studio/components/antd/divider/templates",
  "/backend/modelscope_studio/components/antd/dropdown/templates",
  "/backend/modelscope_studio/components/antd/dropdown/button/templates",
  "/backend/modelscope_studio/components/antd/flex/templates",
  "/backend/modelscope_studio/components/antd/layout/templates",
  "/backend/modelscope_studio/components/antd/layout/content/templates",
  "/backend/modelscope_studio/components/antd/layout/footer/templates",
  "/backend/modelscope_studio/components/antd/layout/header/templates",
  "/backend/modelscope_studio/components/antd/layout/sider/templates",
  "/backend/modelscope_studio/components/antd/menu/templates",
  "/backend/modelscope_studio/components/antd/menu/item/templates",
  "/backend/modelscope_studio/components/antd/grid/row/templates",
  "/backend/modelscope_studio/components/antd/space/templates",
  "/backend/modelscope_studio/components/antd/space/compact/templates",
  "/backend/modelscope_studio/components/base/div/templates",
  "/backend/modelscope_studio/components/base/auto_loading/templates",
  "/backend/modelscope_studio/components/antd/pagination/templates",
  "/backend/modelscope_studio/components/base/span/templates",
  "/backend/modelscope_studio/components/base/text/templates",
  "/backend/modelscope_studio/components/antd/alert/templates",
  "/backend/modelscope_studio/components/antd/alert/error_boundary/templates",
  "/backend/modelscope_studio/components/antd/avatar/templates",
  "/backend/modelscope_studio/components/antd/avatar/group/templates",
  "/backend/modelscope_studio/components/antd/badge/templates",
  "/backend/modelscope_studio/components/antd/badge/ribbon/templates",
  "/backend/modelscope_studio/components/antd/calendar/templates",
  "/backend/modelscope_studio/components/antd/carousel/templates",
  "/backend/modelscope_studio/components/antd/collapse/templates",
  "/backend/modelscope_studio/components/antd/collapse/item/templates",
  "/backend/modelscope_studio/components/antd/descriptions/templates",
  "/backend/modelscope_studio/components/antd/descriptions/item/templates",
  "/backend/modelscope_studio/components/antd/drawer/templates",
  "/backend/modelscope_studio/components/antd/empty/templates",
  "/backend/modelscope_studio/components/antd/image/templates",
  "/backend/modelscope_studio/components/antd/image/preview_group/templates",
  "/backend/modelscope_studio/components/antd/list/templates",
  "/backend/modelscope_studio/components/antd/list/item/templates",
  "/backend/modelscope_studio/components/antd/list/item/meta/templates",
  "/backend/modelscope_studio/components/antd/modal/templates",
  "/backend/modelscope_studio/components/antd/notification/templates",
  "/backend/modelscope_studio/components/antd/popconfirm/templates",
  "/backend/modelscope_studio/components/antd/popover/templates",
  "/backend/modelscope_studio/components/antd/progress/templates",
  "/backend/modelscope_studio/components/antd/result/templates",
  "/backend/modelscope_studio/components/antd/skeleton/templates",
  "/backend/modelscope_studio/components/antd/skeleton/avatar/templates",
  "/backend/modelscope_studio/components/antd/skeleton/button/templates",
  "/backend/modelscope_studio/components/antd/skeleton/image/templates",
  "/backend/modelscope_studio/components/antd/skeleton/input/templates",
  "/backend/modelscope_studio/components/antd/skeleton/node/templates",
  "/backend/modelscope_studio/components/antd/steps/templates",
  "/backend/modelscope_studio/components/antd/steps/item/templates",
  "/backend/modelscope_studio/components/antd/tooltip/templates",
  "/backend/modelscope_studio/components/antd/tree/templates",
  "/backend/modelscope_studio/components/antd/tree/directory_tree/templates",
  "/backend/modelscope_studio/components/antd/tree/tree_node/templates",
  "/backend/modelscope_studio/components/antd/watermark/templates",
  "/backend/modelscope_studio/components/antd/qr_code/templates",
  "/backend/modelscope_studio/components/antd/auto_complete/templates",
  "/backend/modelscope_studio/components/antd/auto_complete/option/templates",
  "/backend/modelscope_studio/components/antd/cascader/templates",
  "/backend/modelscope_studio/components/antd/cascader/option/templates",
  "/backend/modelscope_studio/components/antd/cascader/panel/templates",
  "/backend/modelscope_studio/components/antd/checkbox/templates",
  "/backend/modelscope_studio/components/antd/checkbox/group/templates",
  "/backend/modelscope_studio/components/antd/checkbox/group/option/templates",
  "/backend/modelscope_studio/components/antd/color_picker/templates",
  "/backend/modelscope_studio/components/antd/color_picker/preset/templates",
  "/backend/modelscope_studio/components/antd/date_picker/templates",
  "/backend/modelscope_studio/components/antd/date_picker/preset/templates",
  "/backend/modelscope_studio/components/antd/date_picker/range_picker/templates",
  "/backend/modelscope_studio/components/antd/form/templates",
  "/backend/modelscope_studio/components/antd/form/item/templates",
  "/backend/modelscope_studio/components/antd/form/item/rule/templates",
  "/backend/modelscope_studio/components/antd/input/templates",
  "/backend/modelscope_studio/components/antd/input_number/templates",
  "/backend/modelscope_studio/components/antd/input/otp/templates",
  "/backend/modelscope_studio/components/antd/input/password/templates",
  "/backend/modelscope_studio/components/antd/input/search/templates",
  "/backend/modelscope_studio/components/antd/input/textarea/templates",
  "/backend/modelscope_studio/components/antd/mentions/templates",
  "/backend/modelscope_studio/components/antd/mentions/option/templates",
  "/backend/modelscope_studio/components/antd/radio/templates",
  "/backend/modelscope_studio/components/antd/radio/button/templates",
  "/backend/modelscope_studio/components/antd/radio/group/templates",
  "/backend/modelscope_studio/components/antd/radio/group/option/templates",
  "/backend/modelscope_studio/components/antd/rate/templates",
  "/backend/modelscope_studio/components/antd/segmented/templates",
  "/backend/modelscope_studio/components/antd/segmented/option/templates",
  "/backend/modelscope_studio/components/antd/select/templates",
  "/backend/modelscope_studio/components/antd/statistic/templates",
  "/backend/modelscope_studio/components/antd/statistic/countdown/templates",
  "/backend/modelscope_studio/components/antd/table/templates",
  "/backend/modelscope_studio/components/antd/table/column/templates",
  "/backend/modelscope_studio/components/antd/table/column_group/templates",
  "/backend/modelscope_studio/components/antd/table/expandable/templates",
  "/backend/modelscope_studio/components/antd/table/row_selection/templates",
  "/backend/modelscope_studio/components/antd/table/row_selection/selection/templates",
  "/backend/modelscope_studio/components/antd/tabs/templates",
  "/backend/modelscope_studio/components/antd/tabs/item/templates",
  "/backend/modelscope_studio/components/antd/tag/templates",
  "/backend/modelscope_studio/components/antd/tag/checkable_tag/templates",
  "/backend/modelscope_studio/components/antd/time_picker/templates",
  "/backend/modelscope_studio/components/antd/time_picker/range_picker/templates",
  "/backend/modelscope_studio/components/antd/timeline/templates",
  "/backend/modelscope_studio/components/antd/timeline/item/templates",
  "/backend/modelscope_studio/components/antd/tour/templates",
  "/backend/modelscope_studio/components/antd/tour/step/templates",
  "/backend/modelscope_studio/components/antd/select/option/templates",
  "/backend/modelscope_studio/components/antd/slider/templates",
  "/backend/modelscope_studio/components/antd/slider/mark/templates",
  "/backend/modelscope_studio/components/antd/switch/templates",
  "/backend/modelscope_studio/components/antd/transfer/templates",
  "/backend/modelscope_studio/components/antd/tree_select/templates",
  "/backend/modelscope_studio/components/antd/tree_select/tree_node/templates",
  "/backend/modelscope_studio/components/antd/upload/dragger/templates",
  "/backend/modelscope_studio/components/antd/splitter/templates",
  "/backend/modelscope_studio/components/antd/splitter/panel/templates",
  "/backend/modelscope_studio/components/legacy/Chatbot/templates",
  "/backend/modelscope_studio/components/legacy/Flow/templates",
  "/backend/modelscope_studio/components/legacy/Markdown/templates",
  "/backend/modelscope_studio/components/legacy/MultimodalInput/templates",
  "/backend/modelscope_studio/components/legacy/WaterfallGallery/templates",
  "/backend/modelscope_studio/components/antd/form/provider/templates",
  "/backend/modelscope_studio/components/antd/modal/static/templates",
  "/backend/modelscope_studio/components/antdx/bubble/templates",
  "/backend/modelscope_studio/components/antdx/bubble/list/templates",
  "/backend/modelscope_studio/components/antdx/bubble/list/item/templates",
  "/backend/modelscope_studio/components/antdx/bubble/list/role/templates",
  "/backend/modelscope_studio/components/base/markdown/templates",
  "/backend/modelscope_studio/components/antdx/conversations/templates",
  "/backend/modelscope_studio/components/antdx/conversations/item/templates",
  "/backend/modelscope_studio/components/antdx/attachments/templates",
  "/backend/modelscope_studio/components/antdx/prompts/templates",
  "/backend/modelscope_studio/components/antdx/prompts/item/templates",
  "/backend/modelscope_studio/components/antdx/sender/templates",
  "/backend/modelscope_studio/components/antdx/sender/header/templates",
  "/backend/modelscope_studio/components/antdx/thought_chain/templates",
  "/backend/modelscope_studio/components/antdx/thought_chain/item/templates",
  "/backend/modelscope_studio/components/antdx/welcome/templates",
  "/backend/modelscope_studio/components/antdx/attachments/file_card/templates",
  "/backend/modelscope_studio/components/antdx/suggestion/templates",
  "/backend/modelscope_studio/components/antdx/suggestion/item/templates",
  "/backend/modelscope_studio/components/antdx/x_provider/templates",
  "/backend/modelscope_studio/components/pro/chatbot/templates",
  "/backend/modelscope_studio/components/pro/multimodal_input/templates",
]

[tool.yapfignore]
ignore_patterns = ["node_modules/**", "__pycache__/**", "**/*.pyi"]

[tool.hatch.build.targets.sdist]
exclude = ["__pycache__"]
include = ["/backend/modelscope_studio"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/modelscope_studio"]
exclude = ["__pycache__"]
